Home page nav gap issue fixed

--- a/fitness-shop/src/components/Home/Home.css
+++ b/fitness-shop/src/components/Home/Home.css
@@ -2,6 +2,8 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+  
+  
 }
 .home-arrow {
   color: lightgrey;
@@ -38,4 +40,13 @@
 .home-pic {
   width: 100%;
   height: 100%;
+}
+.black-brick{
+  height: 15px;
+  background-color:black;
+  top:0;
+  width: 100%;
+  position: fixed;
+  z-index: 99;
+  color: aliceblue;
 }
