--- a/fitness-shop/src/components/Nav/Nav.css
+++ b/fitness-shop/src/components/Nav/Nav.css
@@ -9,7 +9,7 @@
 
 .mark-wrap {
   width: 150px;
-  display: block;
+  
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -18,6 +18,7 @@
   border-right: 25px solid transparent;
   height: 0;
   border-radius: 25px;
+  z-index: 100;
 }
 
 .sidebar-nav{
